update the notes on graphs

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -264,15 +264,11 @@ Compared to Figure~\ref{fig:eur} and Figure~\ref{fig:eth}, gas plot (Figure~\ref
 
 %==========================================%
 %GRAPHS:
-%Horizontal: x-axis value is moving
-%Vertical: y-axis value is moving
-%Diagonal: plot is moving
 %About figure1: EUR,CAD and GBP lines are nearly parallel. GBP and EUR come closer after Brexit. Even such an important economical event didn't cause a high volatility compared to BTC price which is more extreme.
-%EOS prices between 07-2017 and 11-2018.  01-2017 and  06-2017 price is set to zero
-%The rest between 01-2017 and 11-2018
+%All prices between 01-2017 and 11-2018
 %GBP -(EUR and USD) chart "The pound dropped to its lowest level against the euro in 2017 after Mario Draghi, head of the European Central Bank, pushed the eurozone currency higher by saying he could start tightening monetary policy." September 2017 GBP loses value against both USD end EUR
-% CAD,EUR,GBP - (BTC and USD): mostly horizontal movements.
-% ETH,EOS,XRP - (BTC and USD): mostly diagonal movements.
+% ETH,XRP - (BTC and USD): mostly diagonal movements. Do they move with BTC or not?
+%CAD, EUR,Tether, BitUsd: We expect stablecoins to be close to a vertical line. CAD and EUR are central bank issued "stablecoins" and compared to Tether and BitUsd (crypto stableoins), we can conclude that they are also fairly stable. (same x-axis range!)
 % TETHER: Does it artificially inflate BTC price? Do they issue un-backed tokens to reinforce BTC price, then sell BTC to fully back tokens?
 %TETHER ATTACK: On October 15, 2018, tether, the market dominating stablecoin with a market cap of $2 billion, was attacked, breaking tether’s peg to USD, dropping its value by 7 percent but simultaneously driving up bitcoin and the whole crypto market by more than 10 percent.
 %on October 15, 2018; where the price drastically surged from $6,376 at 12.31 UTC to $7,083 at 14.50 UTC. A downturn in price was seen approximately one hour after that to $6,821, before went stable at around $6,400 — $6,600. It was one of the one of the most unexpected fluctuations after a while. The first ‘stable coin’ tether (USDT) which supposedly pegged 1:1 to the U.S. dollar fell up to 15% at the same time as the price of bitcoin fluctuate wildly. The movement caused a loss of trust among traders, causing them to sell tether and invest in other cryptocurrencies. A massive selloff for tether against bitcoin was seen, resulting in a price rise in bitcoin.
