How Carbon works + edits on table

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -101,7 +101,6 @@ If Alice goes to Peter Luger's in Brooklyn, consumes a \$100 ribeye, and mints a
 
 \section{Systemization of stablecoins and Justification}
 
-
 % Dollar tokenization vs. low volatitility
 
 \input{setup/table}
@@ -110,6 +109,7 @@ If Alice goes to Peter Luger's in Brooklyn, consumes a \$100 ribeye, and mints a
 % Jeremy: Table here
 
 \section{Backed}
+% issue: the stablecoin is valid as long as the holder trusts the company/person who keeps the reserve, once the trust is gone, the stablecoin worths nothing
 
 \subsection{Redeemable and Directly-Backed.}
 % Description of how it works: Deposit in bank, etc. 
@@ -181,6 +181,19 @@ We performed a search query on \texttt{coindesk.com} and found the following pro
 
 \textbf{Distribution of articles speaking about stablecoin:} 2014: 2, 2017: 4, 2018: 112, 2019 (up to Jan 11): 4.
 
+%================Notes on unranked projects:==========================% 
+
+%CarbonUSD: 
+%t hybridizing both fiat backed and algorithmic stablecoins, (hybrid fiat-algorithmic approach)
+% 1-1 backed with USD
+% unlike purely fiat-backed stablecoin, CarbonUSD's novel meta-token structure enables a seamless future transition to an algorithmic stablecoin model once it reaches sufficient scale as a fully fiat-backed token.
+% meta-token smart contract is a key innovation that enables carbonusd to eventually transition from full fiat-collateralization without distrupting its liquidity network effects on exchanges and while maintaining the highest standards for regulatory compliance.
+% HOW? CarbonUSD is a basket of whitelisted tokens. A token that is whitelisted may be used to create new CarbonUSD, serving as its collateral. Initially, only one token will be whitelisted, a stablecoin that is 1-1 backed with USdollars in a trust account.
+% The first whitelisted token, WT0, is a compliant fiat-backed stablecoin where users can deposit and withdrawal real USD. Governing members of the whitelist can decide when CarbonUSD has enough liquidity to safely switch off from full fiat- collateralization.
+% they also have regular audits (unlike Tether)
+% Redeemable
+% Offchain (fiat-backed, crypto-backed) stablecoins are effective as bootstrapping trust and NOT maintaining it scale. HOWEVERM, Onchain (algorithmic) stablecoins are effective at maintaining trust at scale BUT not at bootstrapping it.
+%=================% 
 
 %==========================================%
 
