--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -202,7 +202,7 @@ We performed a search query on \texttt{coindesk.com} and found the following pro
 \section{Investigation of gas volatility}
 
 % Gas: non-redeemable backed by Ether. like putting Ether in the contract and get USD digital token. why non-redeemable? because you burn Gas to get your digital tokens.
-% But we can make Gas redeemable, there is a way in Ethereum to do that,the GasToken that uses this strategy.
+% But we can make Gas redeemable, there is a way in Ethereum to do that,the GasToken that uses this strategy. It allows you to stockpile and trade Ethereum Gas.
 % Gas is not a currency so you cannot buy things with it BUT you can turn it into a currency : having a smart contract and swaps it with other tokens
 % Gas is actually stable with respect to others, the reason it's not obvious is human error and their wrong mental model
 % Gas is not pegged to anything
@@ -215,7 +215,14 @@ We performed a search query on \texttt{coindesk.com} and found the following pro
 % Gas price refers to the amount of Ether you’re willing to pay for every unit of gas.
 % When a user stores cheap Gas, he can later spend that Gas to send a tx, that means now he pays for less gas for that tx to go through.
 % GasToken allows a transaction to do the same amount of work and pay for less gas, saving on miner fees and costs and allowing users to bid higher gas prices without paying correspondingly higher fees. 
-
+%The gas tokens works on taking advantage of storage refund concept in ethereum, to inspire smart contracts to delete storage variable, ethereum network provides refund when storage variable is deleted upto half of the contract transaction.
+	% If a variable is changed from zero to a non-zero value, there is a gas fee  (writing into the storage is a very very expensive operation because it's altering the global state)
+	% If a variable is changed from a non-zero value to zero, there is a gas refund
+% A user can:
+	% Mint tokens when gasPrice is low: change a variable from a zero value to non-zero.
+	% Burn tokens when gasPrice is high: change a variable from non-zero to zero.
+	
+% As mentioned, the gas refunded from freeing some storage space is less than the initial gas cost of storing the data on-chain in the first place, so why would someone want to do this? Well, you can create these GasTokens (filling an array with ones or creating a bunch of contracts) at a time t with a low gas price (e.g. 2 Gwei) and later consume these GasTokens in a transaction that has a higher gas price. Hence, half of your gas used for the expensive transaction effectively costs you 2 Gwei, while the other half costs 50 Gwei. Even if you don’t get back as much gas as you spent creating these GasTokens, the difference in gas price can make it worth it.
 
 %=================% 
 % Freeing up many storage slots in one transaction can quickly result in the refund counter surpassing half of the full transaction cost. In such a case or in case of self-destructs which can lead to a high refund counter as well we should evaluate how much of the refund can actually be used, as the refund can be at most half of the transaction cost. {The refund that has been accumulated cannot exceed half the gas used up during computation because miners need incentives to correctly execute your txs, and they should not pay Gas for your txs.} Thus freeing up storage slots or deleting contracts can make more sense in combination with other operations if possible (Gas Cost Analysis for Ethereum Smart Contracts: Zurich)
@@ -232,7 +239,24 @@ We performed a search query on \texttt{coindesk.com} and found the following pro
 % Gas is a measure of computation, and the question we have to ask is is the price of computation stable?
 % Hypothesis 1: Gas will look like exactly like Ether (cause it's Ethereum internal things),2 : looks like USD, because it should always cost 5 dollars to looked up an array (because the electricity cost is the same), 3- so it looks like electricity. There is a lot of reasons why things should converge, because of users incorrect mental model. They just can accept whatever their Ethereum client suggests, how this ethereum client gets those numbers? is it a real time or based on statistics? it can be gamed: sth like wash trade to make Gas cheaper (making it expensive is harder). What they could do is never broadcast it to the network so that nobody can put that in their block (causE THEy dont have the original tx to validate). So this way miner can keep those transactions in his private mempool and broad cast the whole block with that tx.
 
+%========GasPrice Plots Explanation:=========% 
 
+% the first spike (Jan 2018) was first Cryptokitties were first introduced and people have to pay more Gas for their txs to go through
+% the other one (August 2018) is when an exchange called Fcoin needed lots of on-chain voting by sending txs that has blocked the network for a little while.
+
+
+%=========GasPlots========%
+\begin{figure}[!htb]
+	\centering
+	\subfloat[Gas with respect to BTC and USD]{\includegraphics[width=0.45\textwidth]{figures/gas.pdf}\label{fig:gas1}}
+	\hfill
+	\subfloat[Gas with respect to ETH and Electricity price]{\includegraphics[width=0.45\textwidth]{figures/gasElectricity.pdf}\label{fig:gas2}}
+	\caption [Caption for LOF]
+      {Ethereum average GasPrice chart. The two spikes correspond to (i) January 2018 when Cryptokitties\footnote{Cryptokitties website \url{https://www.cryptokitties.co/}} was launched for the first time and (ii) the Fcoin 					\footnote{Fcoin website \url{https://www.fcoin.com}} was launched and required a lot of on-chain voting. Both these events have resulted the Gasprice to go up as Ethereum users had to pay more Gas for their transactions to go through.}
+
+	\label{fig:Gas}
+\end{figure}
+%========================%
 
 \textblue{ it would be nice to have a chart : Ether, Electricity (Global energy index), and Gas} \par
 Our analysis in Section~\ref{Intro} shows that cryptocurrencies exhibit less stable behavior compared to fiat currencies. Hence, we aim to analyze the price stability of \emph{Gas}. In Ethereum blockchain, every transaction contains a number of operations and there is a precise amount of gas unit associated with each.\footnote{http://ethdocs.org/en/latest/contracts-and-transactions/account-types-gas-and-transactions.html\#what-is-gas} Since Ether is volatile, this concept is introduced to have fixed cost for operations. Thus, even though the price of Ether changes, the amount of Ether corresponding to a unit of gas decreases; so that users pay the same price for the transactions on the Ethereum blockchain. Hence, the notion of gas is yet to be investigated to find out whether it exhibits behavior similar to fiat currencies or cryptocurrencies.
@@ -293,15 +317,7 @@ Compared to Figure~\ref{fig:eur} and Figure~\ref{fig:eth}, gas plot (Figure~\ref
 	\caption{CAPTION}
 	\label{fig:fiatandcrypto}
 \end{figure}
-%========================%
-\begin{figure}[!htb]
-	\centering
-	\subfloat[Gas with respect to BTC and USD]{\includegraphics[width=0.45\textwidth]{figures/gas.pdf}\label{fig:cad}}
-	\hfill
-	\subfloat[Gas with respect to ETH and Electricity price]{\includegraphics[width=0.45\textwidth]{figures/gasElectricity.pdf}\label{fig:eur}}
-	\caption{CAPTION}
-	\label{fig:fiatandcrypto}
-\end{figure}
+
 
 %==========================================%
 %GRAPHS:
