comments on figure 1 and 2

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -44,6 +44,17 @@ Having said that, the volatile nature of cryptocurrencies (\eg Ether, Bitcoin) h
 \end{figure}
 %========================%
 
+%Figure1: It shows how extreme the volatility of BTC is, when compared to fiat currencies. 
+%EUR,CAD and GBP show stable behaviour.
+%After June 23, 2016 (when the referendum for withdrawal of UK from EU 
+%took place), it can be observed that GBP and EUR values start to come closer as GBP loses and EUR gains value compared to USD. This is how volatility looks like in
+%fiat currencies. Even such an important event with economical impacts didn't cause a high volatility compared to BTC price which exhibits more extreme changes in its value.
+
+%Figure 2 illustrates GBP's behavior against EUR and USD. GBP plot moves in the 2-6 direction and there is a price drop of approximately 24 cents
+%over a five month period following the referendum for Brexit. 
+%Figure 2 zooms into the changes that GBP exhibits over time, as it is plotted over a small interval to reflect the price changes. 
+%Compared to Figure 1, the price drop is more visible, but it is worth noting that the price change is small compared to the changes in the value of BTC. NOTE: about terminology: price or vaue? or something different?
+
 
 Figure~\ref{fig:btc} shows the change of value of Bitcoin with respect to USD and gold. The value changes happen in directions 2 and 6 (Figure~\ref{fig:legend}). The part of plot in direction 2 means that Bitcoin is gaining value against gold and USD. This can also be interpreted as both gold and USD are losing value relative to Bitcoin. %However, the first explanation is more likely to be the case, as only Bitcoin's value is changing compared to two values (USD and gold) changing.
 Also, the fact that the plot is located on the diagonal shows that Bitcoin gains/loses value against both USD and Gold at the same time. This indicates that the changes in the values of USD and gold are highly correlated.
@@ -291,6 +302,19 @@ Figures~\ref{fig:eur}-~\ref{fig:gas} illustrate how the values of EUR, ETH and G
 ETH plot in Figure~\ref{fig:eth} illustrates more volatility against BTC and gold, as there are horizontal, vertical and diagonal changes. The fact that the points are spread in a large range of values indicates drastic changes in ETH price with respect to BTC and Gold.
 
 Compared to Figure~\ref{fig:eur} and Figure~\ref{fig:eth}, gas plot (Figure~\ref{fig:gas}) has mostly diagonal changes, spread over a smaller range. There are less number of changes compared to ETH. Except from the changes between May 2018-July 2018 and January 2018-March 2018, the gas price changes in a smaller range. Even though there are fluctuations in the gas price, it can be inferred that gas price is less volatile than ETH. Also, it worths mentioning that gas is changing over a small scale in x-axis (USD), when compared to Ether's plot over the same axis in a larger interval.
+
+
+%==========================================%
+\begin{figure}[!htb]
+	\centering
+	\subfloat[ETH]{\includegraphics[width=0.45\textwidth]{figures/eth.pdf}\label{fig:cad}}
+	\hfill
+	\subfloat[XRP]{\includegraphics[width=0.45\textwidth]{figures/xrp.pdf}\label{fig:eur}}
+	\caption{CAPTION}
+	\label{fig:fiatandcrypto}
+\end{figure}
+
+
 %========================%
 
 \begin{figure}[!htb]
@@ -309,18 +333,9 @@ Compared to Figure~\ref{fig:eur} and Figure~\ref{fig:eth}, gas plot (Figure~\ref
 
 
 %========================%
-\begin{figure}[!htb]
-	\centering
-	\subfloat[ETH]{\includegraphics[width=0.45\textwidth]{figures/eth.pdf}\label{fig:cad}}
-	\hfill
-	\subfloat[XRP]{\includegraphics[width=0.45\textwidth]{figures/xrp.pdf}\label{fig:eur}}
-	\caption{CAPTION}
-	\label{fig:fiatandcrypto}
-\end{figure}
 
-
-%==========================================%
 %GRAPHS:
+
 %About figure1: EUR,CAD and GBP lines are nearly parallel. GBP and EUR come closer after Brexit. Even such an important economical event didn't cause a high volatility compared to BTC price which is more extreme.
 %All prices between 01-2017 and 11-2018
 %GBP -(EUR and USD) chart "The pound dropped to its lowest level against the euro in 2017 after Mario Draghi, head of the European Central Bank, pushed the eurozone currency higher by saying he could start tightening monetary policy." September 2017 GBP loses value against both USD end EUR
